--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="./css/icon.css">
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+    <link rel="stylesheet" href="./css/materialize.min.css">
+    
     <!-- My styles CSS -->
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/materialize.min.css">
 
 
     <title>Página principal</title>
@@ -155,13 +158,21 @@
     </div>
     <!-- Compiled and minified JavaScript jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="./js/materialize.min.js"></script>
 
     <!-- My JavaScript -->
     <script src="./js/materialize.js"></script>
-    <script src="./js/scroll.js"></script>
+    <script src="./js/message.js"></script>
+    <script src="./js/object.js"></script>
+    <script src="./js/sessionstorage.js"></script>
+    <script src="./js/localstorage.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="./js/validation.js"></script>
+    <script src="./js/bindevent.js"></script>
 </body>
 
 </html>
