--- a/login.html
+++ b/login.html
@@ -9,10 +9,12 @@
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="./css/icon.css">
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+    <link rel="stylesheet" href="./css/materialize.min.css">
+    
     <!-- My styles CSS -->
     <link rel="stylesheet" href="./css/styles.css">
 
@@ -45,7 +47,7 @@
                 <div class="container">
                     <div class="z-depth-1 form-style">
 
-                        <form class="col s12" method="post" id="form" name="form" >
+                        <form class="col s12" method="post" id="form" name="form">
                             <div class="row">
                                 <div class="col s12">
                                     <h5 class="indigo-text">Iniciar session</h5>
@@ -54,17 +56,17 @@
 
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input class="validate" type="text" name="user" id="user" required />
+                                    <input class="validate" type="text" name="usernameLogin" id="usernameLogin" required />
                                     <label for="user">Usuario</label>
-                                    <div class="left" id="alert-username"></div>
+                                    <div class="left" id="alert-usernameLogin"></div>
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input class="validate" type="password" name="password" id="password" required />
+                                    <input class="validate" type="password" name="passwdLogin" id="passwdLogin" required />
                                     <label for="password">Contraseña</label>
-                                    <div class="left" id="alert-passwd"></div>
+                                    <div class="left" id="alert-passwdLogin"></div>
                                 </div>
                                 <label class="label">
                                     <p>¿No tienes cuenta?, obtiene una <a class='blue-text' href='./signin.html'><b>aquí</b></a>.</p>
@@ -73,7 +75,7 @@
 
                             <br />
                             <div class="row">
-                                <button type="button" name="btn_login" id="btn_login" class='col s12 btn btn-large waves-effect blue'>Entrar</button>
+                                <button type="button" name="btn" id="btn" class='col s12 btn btn-large waves-effect blue'>Entrar</button>
                             </div>
                         </form>
                     </div>
@@ -108,9 +110,11 @@
     </div>
     <!-- Compiled and minified JavaScript jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="./js/materialize.min.js"></script>
 
     <!-- My JavaScript -->
     <script src="./js/materialize.js"></script>
