--- a/signin.html
+++ b/signin.html
@@ -9,9 +9,11 @@
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="./css/icon.css">
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="./css/materialize.min.css">
 
     <!-- My styles CSS -->
     <link rel="stylesheet" href="./css/styles.css">
@@ -101,7 +103,7 @@
 
                             <br />
                             <div class='row'>
-                                <button type='button' name='btn_register' id="btn_register" class='col s12 btn btn-large waves-effect blue'>Registrarme</button>
+                                <button type='button' name='btn' id="btn" class='col s12 btn btn-large waves-effect blue'>Registrarme</button>
                             </div>
                         </form>
                     </div>
@@ -134,11 +136,14 @@
             </div>
         </footer>
     </div>
+
     <!-- Compiled and minified JavaScript jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="./js/materialize.min.js"></script>
 
     <!-- My JavaScript -->
     <script src="./js/materialize.js"></script>
