--- a/login.html
+++ b/login.html
@@ -75,7 +75,7 @@
 
                             <br />
                             <div class="row">
-                                <button type="button" name="btn" id="btn" class='col s12 btn btn-large waves-effect blue'>Entrar</button>
+                                <button type="button" name="btn_login" id="btn_login" class='col s12 btn btn-large waves-effect blue'>Entrar</button>
                             </div>
                         </form>
                     </div>
