--- a/rides.html
+++ b/rides.html
@@ -155,7 +155,7 @@
                             <div class="left" id="alert-day"></div>
                         </div>
                         <button type="reset" class="btn waves-effect red btn-long"><i class="material-icons left">cancel</i>Cancelar</button>
-                        <button type="button" class="btn waves-effect red btn-long green" id="btn"><i class="material-icons left">save</i>Guardar</button>
+                        <button type="button" class="btn waves-effect red btn-long green" id="btn_rides"><i class="material-icons left">save</i>Guardar</button>
                     </form>
                 </div>
             </div>
