--- a/setting.html
+++ b/setting.html
@@ -85,7 +85,7 @@
                             </div>
                         </div>
                         <button type="reset" class="btn waves-effect red btn-long"><i class="material-icons left">cancel</i>Cancelar</button>
-                        <button type="button" name="btn" id="btn" class='btn btn-long waves-effect green'><i class="material-icons left">save</i>Actualizar</button>
+                        <button type="button" name="btn_setting" id="btn_setting" class='btn btn-long waves-effect green'><i class="material-icons left">save</i>Actualizar</button>
                     </form>
                 </div>
             </div>
