--- a/signin.html
+++ b/signin.html
@@ -103,7 +103,7 @@
 
                             <br />
                             <div class='row'>
-                                <button type='button' name='btn' id="btn" class='col s12 btn btn-large waves-effect blue'>Registrarme</button>
+                                <button type='button' name='btn_register' id="btn_register" class='col s12 btn btn-large waves-effect blue'>Registrarme</button>
                             </div>
                         </form>
                     </div>
