busquedas y cargas de datos en el index listo solo falta la paginacion del index y del usuario

--- a/dashboard.html
+++ b/dashboard.html
@@ -203,7 +203,7 @@
                     <div class="left" id="alert-day"></div>
                 </div>
                 <div class="modal-footer">
-                    <button type="reset" class="btn waves-effect red btn-long"><i class="material-icons left">cancel</i>Cancelar</button>
+                    <button type="button" class="modal-close btn waves-effect red btn-long"><i class="material-icons left">cancel</i>Cancelar</button>
                     <button type="button" class="btn waves-effect red btn-long green" id="btn_updateRides"><i class="material-icons left">save</i>Guardar</button>
                 </div>
             </form>
